# old-blog

./: .gitignore  CNAME  _config.yaml  _config.yml  about.md  index.html  keybase.txt
_drafts/: 2014-06-23-leaving-baltimore.md  JSON_is_not_object_notation.md  a_trick_of_folds.md  all_kinds_of_freedom.md  all_you_wanted_to_know_about_types_but_were_afraid_to_ask.md  analyzing_transducers.md  calkin-wilf-in-swift.md  codata_diagonalization.md  comma_categories.md  fixed_points.md  if-you-write-a-monad-tutorial.md  immutable_enumeration_in_swift.md  inspiration_of_djikstra.md  intro_to_call_by_push_value.md  mutable_algorithms_in_immutable_languages_part_2.md  mutable_algorithms_in_immutable_languages_part_3.md  pure_profunctor_lenses.md  recognizing_churches.md  six_points_about_type_safety.md  solving_problems_by_organized_assault.md  the_little_lenser.md  types_of_data_in_swift.md  types_of_recursive_data.md  typing-transducers.md  typing_transducers_via_state_machines.md
_includes/: head.html  sidebar.html
_layouts/: default.html  post.html
_plugins/: publisher.rb
_posts/: 2014-06-23-a-game-of-kyles.md  2014-06-25-if-you-write-a-monad-tutorial.md  2014-06-25-memoizing-kayles.md  2014-07-08-all_you_wanted_to_know_about_types_but_were_afraid_to_ask.md  (+20 more)
public/code/MutableImmutable/Part2/: TAGS  mutable-immutable-part-two.cabal
public/code/MutableImmutable/Part2/AbstractUnionFind/: Internal.hs
public/code/MutableImmutable/Part2/UnionFind/: IO.hs  IntMap.hs
public/code/crypto-pals/: LICENSE  crypto-pals.cabal
public/code/crypto-pals/src/: Scratch.hs
(+39 files in other folders)
