name:                crypto-pals
version:             0.1.0.0
synopsis:            http://cryptopals.com/
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2014 (c) Joseph Abrahamson
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Scratch
  build-depends:
      base >=4.7 && <4.8
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , foldl
    , lens
    , text
    , unordered-containers
  hs-source-dirs: src
  default-language: Haskell2010