name:                mutable-immutable-part-two
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2014 (c) Joseph Tel Abrahamson
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    AbstractUnionFind
    AbstractUnionFind.Internal
    Mem
    UnionFind.IO
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010